--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "courier-hub-api",
-  "version": "1.0.0",
+  "name": "somoy-express-api",
+  "version": "2.0.0",
   "description": "",
   "main": "index.js",
    "scripts": {
